k3s/zerix-ai-middleware.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zerix-ai-test

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zerix-middleware
  namespace: zerix-ai-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zerix-middleware
  template:
    metadata:
      labels:
        app: zerix-middleware
    spec:
      nodeSelector:
        role: storage
      containers:
        - name: zerix-db
          image: postgres:15-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: zerix-storage
              mountPath: /var/lib/postgresql/data
        - name: zerix-redis
          image: redis:6-alpine
          command: [ "redis-server", "--requirepass", "zerixai123456" ]
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: zerix-storage
              mountPath: /data
              subPath: redis
        - name: sandbox
          image: langgenius/zerix-sandbox:0.2.10
          ports:
            - containerPort: 8194
          volumeMounts:
            - name: zerix-storage
              mountPath: /dependencies
              subPath: sandbox
          livenessProbe:
            httpGet:
              path: /health
              port: 8194
            initialDelaySeconds: 5
            periodSeconds: 10
        - name: zerix-weaviate
          image: semitechnologies/weaviate:1.19.0
          profiles:
            - name: weaviate
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: zerix-storage
              mountPath: /var/lib/weaviate
              subPath: weaviate
      volumes:
        - name: zerix-storage
          persistentVolumeClaim:
            claimName: zerix-storage-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: zerix-db-service
  namespace: zerix-ai-test
spec:
  selector:
    app: zerix-middleware
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
      nodePort: 30001
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: zerix-redis-service
  namespace: zerix-ai-test
spec:
  selector:
    app: zerix-middleware
  ports:
    - port: 6379
      targetPort: 6379
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: zerix-sandbox-service
  namespace: zerix-ai-test
spec:
  selector:
    app: zerix-middleware
  ports:
    - protocol: TCP
      port: 8194
      targetPort: 8194
  type: ClusterIP

---

apiVersion: v1
kind: Service
metadata:
  name: zerix-weaviate-service
  namespace: zerix-ai-test
spec:
  selector:
    app: zerix-middleware
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
