k3s/zerix-ai-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zerix-api
  namespace: zerix-ai-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zerix-api
  template:
    metadata:
      labels:
        app: zerix-api
    spec:
      imagePullSecrets:
        - name: my-ghcr-secret
      containers:
        - name: zerix-api
          image: ghcr.io/zerix-defi/zerix-api:latest
          ports:
            - containerPort: 5001
          volumeMounts:
            - name: zerix-storage
              mountPath: /app/api/storage
              subPath: storage
          livenessProbe:
            httpGet:
              path: /console/api/version
              port: 5001
            initialDelaySeconds: 60
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /console/api/version
              port: 5001
            initialDelaySeconds: 60
            periodSeconds: 30
        - name: zerix-worker
          image: ghcr.io/zerix-defi/zerix-api:latest
          volumeMounts:
            - name: zerix-storage
              mountPath: /app/api/storage
              subPath: storage
        - name: zerix-beat
          image: ghcr.io/zerix-defi/zerix-api:latest
          volumeMounts:
            - name: zerix-storage
              mountPath: /app/api/storage
              subPath: storage
      volumes:
        - name: zerix-storage
          persistentVolumeClaim:
            claimName: zerix-storage-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: zerix-api-service
  namespace: zerix-ai-test
spec:
  selector:
    app: zerix-api
  ports:
    - port: 5001
      targetPort: 5001
  type: NodePort

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zerix-api-ingress
  namespace: zerix-ai-test
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: test-ai-api.zerix.io
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: zerix-api-service
                port:
                  number: 5001
    - host: agent-api.saintai.live
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: zerix-api-service
                port:
                  number: 5001
    - host: api.umoney.fun
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: zerix-api-service
                port:
                  number: 5001
